Add global styles

--- a/index.html
+++ b/index.html
@@ -5,10 +5,38 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Falonchi Pistonchiyev - Portfolio</title>
+  <style>
+    html {
+      box-sizing: border-box;
+    }
+    *,
+    *::before,
+    *::after {
+      box-sizing: inherit;
+    }
+    body {
+      padding: 0;
+      margin: 0;
+      font-family: "Arial", sans-serif;
+    }
+    .container {
+      width: 100%;
+      max-width: 800px;
+      padding-left: 50px;
+      padding-right: 50px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    h1 {
+      text-align: center;
+    }
+  </style>
 </head>
 <body>
 
-  <h1>Falonchi Pistonchiyev</h1>
+  <div class="container">
+    <h1>Falonchi Pistonchiyev</h1>
+  </div>
 
 </body>
 </html>
