--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 <body>
 
   <div class="container">
+    <img src="https://picsum.photos/id/870/100" alt="Lighthouse" width="100" height="100">
     <h1>Falonchi Pistonchiyev</h1>
   </div>
 
