--- a/index.html
+++ b/index.html
@@ -39,5 +39,9 @@
     <h1>Falonchi Pistonchiyev</h1>
   </div>
 
+  <div class="container">
+    <img src="https://picsum.photos/150?random=1" alt="rasm" width="150" height="150"><img src="https://picsum.photos/150?random=2" alt="rasm" width="150" height="150"><img src="https://picsum.photos/150?random=3" alt="rasm" width="150" height="150"><img src="https://picsum.photos/150?random=4" alt="rasm" width="150" height="150"><img src="https://picsum.photos/150?random=5" alt="rasm" width="150" height="150"><img src="https://picsum.photos/150?random=6" alt="rasm" width="150" height="150">
+  </div>
+
 </body>
 </html>
